     Andrew Cowie)

   * UniqueIntegerBugTracker now appends bug-ids instead of joining
     them to the base URL. Plugins that register bug trackers may
     need a trailing / added to the base URL if one is not already there.
     (James Wesby, Andrew Cowie)

  FEATURES:

    * Added mail-mode GNU Emacs mail package as a mail_client.
      (Xavier Maillard, Bojan Nikolic)

  IMPROVEMENTS:

    * ``bzr commit --fixes`` now recognises "gnome" as a tag by default.
      (James Westby, Andrew Cowie)

    * ``bzr switch`` will attempt to find branches to switch to relative to the
      current branch. E.g. ``bzr switch branchname`` will look for
      ``current_branch/../branchname``. (Robert Collins, Jelmer Vernooij,
      Wouter van Heyst)

    * Diff is now more specific about execute-bit changes it describes
      (Chad Miller)

    * Fetching data over HTTP is a bit faster when urllib is used.  This is done
      by forcing it to recv 64k at a time when reading lines in HTTP headers,
      rather than just 1 byte at a time.  (Andrew Bennetts)

    * Log --short and --line are much faster when -r is not specified.
      (Aaron Bentley)

    * Merge is faster.  We no longer check a file's existence unnecessarily
      when merging the execute bit.  (Aaron Bentley)

    * ``bzr status`` on an explicit list of files no longer shows pending
      merges, making it much faster on large trees. (John Arbash Meinel)

    * The launchpad directory service now warns the user if they have not set
      their launchpad login and are trying to resolve a URL using it, just
      in case they want to do a write operation with it.  (James Westby)

    * The smart protocol client is slightly faster, because it now only queries
      the server for the protocol version once per connection.  Also, the HTTP
      transport will now automatically probe for and use a smart server if
      one is present.  You can use the new ``nosmart+`` transport decorator